// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Catalogue Layout > renders a catalogue categories page correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-v2kfba"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1gc5pr5-MuiGrid2-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Catalogue Home"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="navigate to catalogue home"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="HomeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
          </button>
        </span>
        <nav
          aria-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-fxix4h-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-1uwp4ue-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <div
                class="MuiBox-root css-8zy5qf"
              />
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <p
                aria-label="Beam Characterization"
                class="MuiTypography-root MuiTypography-body1 css-1d1tquj-MuiTypography-root"
                data-mui-internal-clone-element="true"
                role="tooltip"
              >
                Beam Characterization
              </p>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Catalogue Layout > renders a catalogue items landing page correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-v2kfba"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1gc5pr5-MuiGrid2-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Catalogue Home"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="navigate to catalogue home"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="HomeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
          </button>
        </span>
        <nav
          aria-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-fxix4h-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-1uwp4ue-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <div
                class="MuiBox-root css-8zy5qf"
              />
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-label="Beam Characterization"
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
                href="#"
              >
                <p
                  aria-label="Beam Characterization"
                  class="MuiTypography-root MuiTypography-body1 css-1iitylf-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Beam Characterization
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-label="Cameras"
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
                href="#"
              >
                <p
                  aria-label="Cameras"
                  class="MuiTypography-root MuiTypography-body1 css-1iitylf-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Cameras
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <p
                aria-label="Cameras 1"
                class="MuiTypography-root MuiTypography-body1 css-15ru3cl-MuiTypography-root"
                data-mui-internal-clone-element="true"
                role="tooltip"
              >
                Cameras 1
              </p>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Catalogue Layout > renders a catalogue items page correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-v2kfba"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1gc5pr5-MuiGrid2-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Catalogue Home"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="navigate to catalogue home"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="HomeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
          </button>
        </span>
        <nav
          aria-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-fxix4h-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-1uwp4ue-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <div
                class="MuiBox-root css-8zy5qf"
              />
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-label="Beam Characterization"
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
                href="#"
              >
                <p
                  aria-label="Beam Characterization"
                  class="MuiTypography-root MuiTypography-body1 css-dbkvtt-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Beam Characterization
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <p
                aria-label="Cameras"
                class="MuiTypography-root MuiTypography-body1 css-su6c9i-MuiTypography-root"
                data-mui-internal-clone-element="true"
                role="tooltip"
              >
                Cameras
              </p>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Catalogue Layout > renders catalogue home page correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-v2kfba"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1gc5pr5-MuiGrid2-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Catalogue Home"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="navigate to catalogue home"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="HomeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
          </button>
        </span>
        <nav
          aria-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-fxix4h-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-1uwp4ue-MuiBreadcrumbs-ol"
          />
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Catalogue Layout > renders the item landing page page correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-v2kfba"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1gc5pr5-MuiGrid2-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Catalogue Home"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="navigate to catalogue home"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="HomeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
          </button>
        </span>
        <nav
          aria-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-fxix4h-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-1uwp4ue-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <div
                class="MuiBox-root css-8zy5qf"
              />
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-label="Beam Characterization"
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
                href="#"
              >
                <p
                  aria-label="Beam Characterization"
                  class="MuiTypography-root MuiTypography-body1 css-1d9gh2-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Beam Characterization
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-label="Cameras"
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
                href="#"
              >
                <p
                  aria-label="Cameras"
                  class="MuiTypography-root MuiTypography-body1 css-1d9gh2-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Cameras
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-label="Cameras 1"
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
                href="#"
              >
                <p
                  aria-label="Cameras 1"
                  class="MuiTypography-root MuiTypography-body1 css-1d9gh2-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Cameras 1
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-label="Items"
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
                href="#"
              >
                <p
                  aria-label="Items"
                  class="MuiTypography-root MuiTypography-body1 css-1d9gh2-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Items
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <p
                aria-label="5YUQDDjKpz2z"
                class="MuiTypography-root MuiTypography-body1 css-a2v2gn-MuiTypography-root"
                data-mui-internal-clone-element="true"
                role="tooltip"
              >
                5YUQDDjKpz2z
              </p>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Catalogue Layout > renders the items page correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-v2kfba"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1gc5pr5-MuiGrid2-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Catalogue Home"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="navigate to catalogue home"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="HomeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
          </button>
        </span>
        <nav
          aria-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-fxix4h-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-1uwp4ue-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <div
                class="MuiBox-root css-8zy5qf"
              />
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-label="Beam Characterization"
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
                href="#"
              >
                <p
                  aria-label="Beam Characterization"
                  class="MuiTypography-root MuiTypography-body1 css-1eflll8-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Beam Characterization
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-label="Cameras"
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
                href="#"
              >
                <p
                  aria-label="Cameras"
                  class="MuiTypography-root MuiTypography-body1 css-1eflll8-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Cameras
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-label="Cameras 1"
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
                href="#"
              >
                <p
                  aria-label="Cameras 1"
                  class="MuiTypography-root MuiTypography-body1 css-1eflll8-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Cameras 1
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-jhr02i-MuiBreadcrumbs-separator"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <p
                aria-label="Items"
                class="MuiTypography-root MuiTypography-body1 css-zdtazc-MuiTypography-root"
                data-mui-internal-clone-element="true"
                role="tooltip"
              >
                Items
              </p>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Catalogue Layout Error Component > renders catalogue error page correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-v2kfba"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1gc5pr5-MuiGrid2-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <span
          aria-label="Catalogue Home"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="navigate to catalogue home"
            class="MuiButtonBase-root Mui-focusVisible MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="HomeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-r3djoj-MuiTouchRipple-root"
            >
              <span
                class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
                style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
              >
                <span
                  class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
                />
              </span>
              <span
                class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible MuiTouchRipple-ripplePulsate"
                style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
              >
                <span
                  class="MuiTouchRipple-child MuiTouchRipple-childPulsate"
                />
              </span>
            </span>
          </button>
        </span>
        <nav
          aria-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-fxix4h-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-1uwp4ue-MuiBreadcrumbs-ol"
          />
        </nav>
      </div>
    </div>
    <div>
      <div
        class="MuiBox-root css-d8r78j"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-182b5zx-MuiSvgIcon-root"
          data-testid="BugReportIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5s-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20zm-6 8h-4v-2h4zm0-4h-4v-2h4z"
          />
        </svg>
        <p
          class="MuiTypography-root MuiTypography-body1 css-vbjpyr-MuiTypography-root"
        >
          404
        </p>
      </div>
      <div
        class="MuiBox-root css-sg7ujc"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 css-dyl3ya-MuiTypography-root"
        >
          Page not found
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1 css-13cqhiy-MuiTypography-root"
        >
          We're sorry, the page you requested was not found on the server. If you entered the URL manually please check your spelling and try again. Otherwise, return to the 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1amp05l-MuiTypography-root-MuiLink-root"
            href="/catalogue"
          >
            catalogue home page
          </a>
           .
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
